Organização de estrtura de pastas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Wini</title>
 
 </head>
@@ -88,8 +88,9 @@
         <p>2024 Wini Silveira. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="player.js"></script>
-    <script src="game.js"></script>
-    <script src="main.js"></script>
+    <script src="/js/game.js"></script>
+    <script src="/js/player.js"></script>
+    <script src="/js/main.js"></script>
+
 </body>
 </html>
