Enemy  add, show fps add and delete bullet add

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </form>
         <div class="hud-game">
             <p>SCORE: 100</p>
+            <div class="fps">fps: <span id="fps"></span></div>
         </div>
 
     </div>
@@ -88,8 +89,10 @@
         <p>2024 Wini Silveira. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="/js/game.js"></script>
+    <script src="/js/showFps.js"></script>
+    <script src="/js/enemy.js"></script>
     <script src="/js/player.js"></script>
+    <script src="/js/game.js"></script>
     <script src="/js/main.js"></script>
 
 </body>
