Sistema de colisão entre enemy e bullet

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
             </div>
         </form>
         <div class="hud-game">
-            <p>SCORE: 100</p>
+            <p class = "score">SCORE: 100</p>
             <div class="fps">fps: <span id="fps"></span></div>
         </div>
-
     </div>
+    
 
     <footer>
         <p>2024 Wini Silveira. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="/js/showFps.js"></script>
+    <script src="/js/showFps.js"></script>]
     <script src="/js/enemy.js"></script>
     <script src="/js/player.js"></script>
     <script src="/js/game.js"></script>
