BackEnd Atualizado- Validações e Score Funcional

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,48 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/FrontEnd/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <title>Wini</title>
 
 </head>
 <body>
     <div class="map">
 
-        <form>
-            <h1>SHOOTING GAME</h1>
-            <input placeholder="username" type="text" id="input-username"></input>
-            <button type="button" onclick="startButton()">INICIAR</button>
-            <div class="scoreboard">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Rank</th>
-                            <th>User</th>
-                            <th>Score</th>
-                        </tr>
-                    </thead>
-                    <tbody id="score">
-                        <tr>
-                            <td>1</td>
-                            <td>User</td>
-                            <td>0</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div class="background"></div>
+            <form>
+                <div id="popup" class="popup hidden">Digite um nome de usuário válido!</div>
+                <div id="loadingPopup" class="loading-popup">
+                    <p>Carregando...</p>
+                </div>
+
+                <h1>SHOOTING GAME</h1>
+                <input placeholder="username" type="text" maxlength="10" id="input-username"></input>
+                <button type="button" onclick="startButton()">PLAY</button>
+                <div class="scoreboard">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Rank</th>
+                                <th>User</th>
+                                <th>Score</th>
+                            </tr>
+                        </thead>
+                        <tbody id="score" class="tbody">
+                            <tr>
+                                <td>1</td>
+                                <td>User</td>
+                                <td>0</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </form>
+
+            <div class="hud-game">
+                <p class = "score">SCORE: 100</p>
+                <div class="fps">fps: <span id="fps"></span></div>
             </div>
-        </form>
-        <div class="hud-game">
-            <p class = "score">SCORE: 100</p>
-            <div class="fps">fps: <span id="fps"></span></div>
-        </div>
     </div>
-    
-
-    <footer>
-        <p>2024 Wini Silveira. Todos os direitos reservados.</p>
-    </footer>
-
+   
     <script src="/FrontEnd/js/bd.js"></script>
-    <script src="/FrontEnd/js/showFps.js"></script>]
+    <script src="/FrontEnd/js/showFps.js"></script>
     <script src="/FrontEnd/js/enemy.js"></script>
     <script src="/FrontEnd/js/player.js"></script>
     <script src="/FrontEnd/js/game.js"></script>
